SERVER-111863 Allow ExtensionDBException to be copyable (#44998)

GitOrigin-RevId: fba2db5b2a47dd6e0df92694a58a3fb0ecdcaf21