src/mongo/db/extension/shared/extension_status.h
@@ -96,10 +96,11 @@ private:
         // No-op for ExtensionStatusOK
     }
 
-    static void _extSetReason(::MongoExtensionStatus* status,
-                              MongoExtensionByteView newReason) noexcept {
-        // No-op for ExtensionStatusOK
-    }
+    static ::MongoExtensionStatus* _extSetReason(::MongoExtensionStatus* status,
+                                                 MongoExtensionByteView newReason) noexcept;
+
+    static MongoExtensionStatus* _extClone(const ::MongoExtensionStatus* status,
+                                           ::MongoExtensionStatus** output) noexcept;
 
     static const ::MongoExtensionStatusVTable VTABLE;
     static size_t sInstanceCount;
@@ -157,10 +158,11 @@ private:
         static_cast<ExtensionGenericStatus*>(status)->setCode(newCode);
     }
 
-    static void _extSetReason(::MongoExtensionStatus* status,
-                              MongoExtensionByteView newReason) noexcept {
-        static_cast<ExtensionGenericStatus*>(status)->setReason(byteViewAsStringView(newReason));
-    }
+    static ::MongoExtensionStatus* _extSetReason(::MongoExtensionStatus* status,
+                                                 MongoExtensionByteView newReason) noexcept;
+
+    static MongoExtensionStatus* _extClone(const ::MongoExtensionStatus* status,
+                                           ::MongoExtensionStatus** output) noexcept;
 
     static const ::MongoExtensionStatusVTable VTABLE;
 
@@ -219,11 +221,12 @@ private:
         // and its error code is set at construction time
     }
 
-    static void _extSetReason(::MongoExtensionStatus* status,
-                              MongoExtensionByteView newReason) noexcept {
-        // No-op for ExtensionStatusException because the wrapped exception is immutable
-        // and its error message is set at construction time
-    }
+    static ::MongoExtensionStatus* _extSetReason(::MongoExtensionStatus* status,
+                                                 MongoExtensionByteView newReason) noexcept;
+
+    static MongoExtensionStatus* _extClone(const ::MongoExtensionStatus* status,
+                                           ::MongoExtensionStatus** output) noexcept;
+
     static const ::MongoExtensionStatusVTable VTABLE;
 
     /**
@@ -263,16 +266,49 @@ public:
         return byteViewAsStringView(vtable().get_reason(get()));
     }
 
-protected:
-    void _assertVTableConstraints(const VTable_t& vtable) const override {
+    void setCode(int code);
+
+    void setReason(const std::string& reason);
+
+    StatusHandle clone() const;
+
+    static void assertValidStatus(const ::MongoExtensionStatus* status) {
+        tassert(11186307, "Provided MongoExtensionStatus was invalid", status != nullptr);
+        tassert(11186308,
+                "Provided MongoExtensionStatus VTable was invalid",
+                status->vtable != nullptr);
+        assertVTableConstraintsHelper(*status->vtable);
+    }
+
+    // TODO SERVER-115110: Refactor Status API from Owned/Unowned concept.
+    static void assertVTableConstraintsHelper(const VTable_t& vtable) {
         tassert(10930105, "HostStatus 'get_code' is null", vtable.get_code != nullptr);
         tassert(10930106, "HostStatus 'get_reason' is null", vtable.get_reason != nullptr);
+        tassert(11186306, "HostStatus 'set_code' is null", vtable.set_code != nullptr);
+        tassert(11186309, "HostStatus 'set_reason' is null", vtable.set_reason != nullptr);
+        tassert(11186310, "HostStatus 'clone' is null", vtable.clone != nullptr);
+    }
+
+protected:
+    void _assertVTableConstraints(const VTable_t& vtable) const override {
+        assertVTableConstraintsHelper(vtable);
     };
 };
 
 /**
- * Encompasses a class of exceptions due to lack of resources or conflicting resources. Can be used
- * to conveniently catch all derived exceptions instead of enumerating each of them individually.
+ * ExtensionDBException represents a MongoExtensionStatus reporting an error, rethrown as a C++
+ * exception. When a call is made across the API boundary via the C API, the function must be
+ * invoked using invokeCAndConvertStatusToException, which throws a non-OK MongoExtensionStatus as
+ * an ExtensionDBException wrapping the original returned status.
+ *
+ * We hold on to the original status handle in order to facilitate propagating the status across the
+ * API boundary multiple times if necessary without needing to re-allocate a MongoExtensionStatus.
+ *
+ * Exceptions are generally thrown by value, and are either moved or copied depending on the
+ * platform. Recent Visual Studio versions mandate all exceptions have a copy constructor, while our
+ * supported linux compilers both take advantage of the move semantics. In both these scenarios, it
+ * should be safe to extract the status handle from inside a catch block.
+ *
  */
 class ExtensionDBException final : public DBException {
 public:
@@ -282,14 +318,31 @@ public:
                                                 std::string(extensionStatus.getReason()))),
           _extensionStatus(std::move(extensionStatus)) {}
 
+    ExtensionDBException(const ExtensionDBException& other)
+        : DBException(other), _extensionStatus(other._extensionStatus.clone()) {}
+
+    ExtensionDBException(ExtensionDBException&& other)
+        : DBException(std::move(other)),
+          _extensionStatus(std::move(other._extensionStatus)) {}  // NOLINT(bugprone-use-after-move)
+
+    ExtensionDBException& operator=(const ExtensionDBException& other) {
+        DBException::operator=(other);
+        _extensionStatus = other._extensionStatus.clone();
+        return *this;
+    }
+
+    ExtensionDBException& operator=(ExtensionDBException&& other) {
+        DBException::operator=(std::move(other));
+        _extensionStatus = std::move(other._extensionStatus);  // NOLINT(bugprone-use-after-move)
+        return *this;
+    }
+
     StatusHandle extractStatus() {
-        stdx::unique_lock lk(_mutex);
         return std::move(_extensionStatus);
     }
 
 private:
     void defineOnlyInFinalSubclassToPreventSlicing() final {};
-    stdx::mutex _mutex;
     StatusHandle _extensionStatus;
 };
 
@@ -343,5 +396,60 @@ void invokeCAndConvertStatusToException(Fn&& fn) {
     if (auto code = status.getCode(); MONGO_unlikely(code != MONGO_EXTENSION_STATUS_OK)) {
         return convertStatusToException(std::move(status));
     }
+}
+
+inline ::MongoExtensionStatus* ExtensionGenericStatus::_extSetReason(
+    ::MongoExtensionStatus* status, MongoExtensionByteView newReason) noexcept {
+    return wrapCXXAndConvertExceptionToStatus([&]() {
+        static_cast<ExtensionGenericStatus*>(status)->setReason(byteViewAsStringView(newReason));
+    });
+}
+
+inline MongoExtensionStatus* ExtensionGenericStatus::_extClone(
+    const ::MongoExtensionStatus* status, ::MongoExtensionStatus** output) noexcept {
+    return wrapCXXAndConvertExceptionToStatus([&]() {
+        tassert(11186300,
+                "Received invalid output target for ExtensionGenericStatus::clone",
+                output != nullptr);
+        const auto& instance = *static_cast<const ExtensionGenericStatus*>(status);
+        *output = new ExtensionGenericStatus(instance);
+    });
+}
+
+inline ::MongoExtensionStatus* ExtensionStatusOK::_extSetReason(
+    ::MongoExtensionStatus* status, MongoExtensionByteView newReason) noexcept {
+    // Forbidden for ExtensionStatusOK
+    return wrapCXXAndConvertExceptionToStatus(
+        []() { tasserted(11186303, "Calling setReason on ExtensionStatusOK is forbidden!"); });
+}
+
+inline MongoExtensionStatus* ExtensionStatusOK::_extClone(
+    const ::MongoExtensionStatus* status, ::MongoExtensionStatus** output) noexcept {
+    return wrapCXXAndConvertExceptionToStatus([&]() {
+        tassert(11186301,
+                "Received invalid output target for ExtensionStatusOK::clone",
+                output != nullptr);
+        *output = &ExtensionStatusOK::getInstance();
+    });
+}
+
+inline ::MongoExtensionStatus* ExtensionStatusException::_extSetReason(
+    ::MongoExtensionStatus* status, MongoExtensionByteView newReason) noexcept {
+    // Forbidden for ExtensionStatusException because the wrapped exception is immutable
+    // and its error message is set at construction time
+    return wrapCXXAndConvertExceptionToStatus([]() {
+        tasserted(11186304, "Calling setReason on ExtensionStatusException is forbidden!");
+    });
+}
+
+inline MongoExtensionStatus* ExtensionStatusException::_extClone(
+    const ::MongoExtensionStatus* status, ::MongoExtensionStatus** output) noexcept {
+    return wrapCXXAndConvertExceptionToStatus([&]() {
+        tassert(11186302,
+                "Received invalid output target for ExtensionStatusException::clone",
+                output != nullptr);
+        const auto& instance = *static_cast<const ExtensionStatusException*>(status);
+        *output = new ExtensionStatusException(instance);
+    });
 }
 }  // namespace mongo::extension
